crates/clinker-exec/tests/snapshots/path_a_parity__canonical_dag_aggregate_windowed.snap
---
source: crates/clinker-exec/tests/path_a_parity.rs
expression: shape
---
[source] sales
[transform] active_only <- sales
[aggregation] by_dept <- active_only
[sink] dept_totals <- by_dept
