crates/clinker-exec/tests/snapshots/path_a_parity__canonical_dag_combine_two_input_mixed.snap
---
source: crates/clinker-exec/tests/path_a_parity.rs
expression: shape
---
[source] products
[source] orders
[combine] qualified <- orders, products
[sink] qualified_out <- qualified
