crates/clinker-exec/tests/snapshots/path_a_parity__canonical_dag_route_fanout.snap
---
source: crates/clinker-exec/tests/path_a_parity.rs
expression: shape
---
[source] orders
[transform] classify <- orders
[route] classify_route <- classify
[sink] low <- classify_route
[sink] high <- classify_route
